--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ DerivedData
 
 # Android/IntelliJ
 #
-build/
+#build/
 .idea
 .gradle
 local.properties
@@ -72,3 +72,7 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# env
+.env
+
